# SideJITServer

./: .dockerignore  .gitignore  COMPILE.md  Dockerfile  README.Docker.md  README.md  compose.yaml  enable_jit.py  expanded-windows-install.md  main.py  pyproject.toml  requirements.txt  sidejitserver-nuitka-package.config.yml
.github/: FUNDING.yml
.github/workflows/: compile.yml  python-publish.yml
SideJITServer/: __init__.py  __main__.py  launch.py
